backends/drm: clear the import damage journal after renderTestBuffer

Otherwise, the newly allocated buffer has an entry in the damage journal, which
means it only gets partially repainted when drawing an actual frame. The result
of that was heavy flickering, until that buffer got fully repainted.

BUG: 510195


(cherry picked from commit b952e59442f96ca89ff64ecaf4ad56f1d8c19ded)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>